--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -21,7 +21,7 @@
 @mixin section-padding{
   padding:0 $mobile-margin;
   @include tablet{
-    padding: 0 $tablet-margin-edge;
+    padding: 0 $tablet-desktop-margin;
     max-width: $fixed-width;
     margin: 1.5rem auto;
   }
