--- a/src/components/CurrentVideo/CurrentVideo.scss
+++ b/src/components/CurrentVideo/CurrentVideo.scss
@@ -2,31 +2,29 @@
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/mixins" as *;
 
-.current-video{
+.current-video {
+  width: 100%;
+  height: calc(100vw * 8 / 16);
 
-    width:100%;
-    height: calc(100vw * 8 / 16);
-    
-    background-color: #000000;
-    @include tablet{
-        padding: 0 $tablet-desktop-margin;
-        height: calc((100vw - 2 * $tablet-desktop-margin) * 9 / 16); // calculation to ensure 12:9
-        
-    }
-    @include desktop{
-        @include flex-justify(center);
-        height: 45rem ;
-        
-    }
+  background-color: #000000;
+  @include tablet {
+    padding: 0 $tablet-desktop-margin;
+    height: calc(
+      (100vw - 2 * $tablet-desktop-margin) * 9 / 16
+    ); // calculation to ensure 12:9
+  }
+  @include desktop {
+    @include flex-justify(center);
+    height: 36.56rem;
+  }
 
-    &__player{
-        width:100%;
-        height: 100%;
-        object-fit: cover;
-        @include desktop{
-            width: 80rem;
-            height: 45rem ;
-            
-        }
+  &__player {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    @include desktop {
+      width: 65rem;
+      height: 36.56rem;
     }
+  }
 }
