--- a/src/components/VideoList/VideoList.scss
+++ b/src/components/VideoList/VideoList.scss
@@ -1,14 +1,20 @@
-@use "../../styles/partials/typography";
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/mixins" as *;
 
 .video-list {
-    @include section-padding;
-    
+  @include section-padding;
+  @include desktop {
+    display: inline-block;
+    border-left: 1px solid $outline-color;
+  }
+
   &__title {
     @include body-font;
     color: $secondary-text-color;
     font-weight: 700;
     margin: $mobile-margin 0;
+    @include tablet{
+      margin: $tablet-margin-edge 0 $mobile-margin;
+    }
   }
 }
