--- a/src/components/Comment/Comment.scss
+++ b/src/components/Comment/Comment.scss
@@ -1,4 +1,3 @@
-@use "../../styles/partials/typography";
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/mixins" as *;
 
@@ -7,6 +6,15 @@
     border-bottom: 1px solid $outline-color;
     margin: $mobile-margin 0;
     width:100%;
+    @include desktop{
+      padding-right: $tablet-desktop-margin;
+    }
+
+    &:last-child {
+      @include desktop {
+        border-bottom: none;
+      }
+    }
     
     &__avatar {
       background-color: $outline-color;
@@ -22,7 +30,7 @@
     }
     &__content {
       margin-right: $mobile-margin;
-      width: calc(100% - 5rem );
+      width: calc(100% - 4.5rem );
     }
     
     &__name-box {
