--- a/src/components/CommentSection/CommentSection.scss
+++ b/src/components/CommentSection/CommentSection.scss
@@ -1,5 +1,3 @@
-
-@use "../../styles/partials/typography";
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/mixins" as *;
 
@@ -7,6 +5,9 @@
     @include section-padding;
 
     margin: $mobile-margin 0;
+    @include desktop{
+        padding-right: 0;
+    }
 
 
     &__count{
