--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,41 +1,44 @@
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/mixins" as *;
 
-.button-wrapper {
-  @include tablet {
-    display: inline-block;
-    vertical-align: top;
-  }
-}
-
 .button {
-  &--nav {
-    @include flex-justify(space-between);
-    align-items: center;
-    width: 100%;
-    padding: 0.5rem;
-    padding-right: calc(50% - 1.5625rem); // center the name on the button
-    height: 2.5rem;
-    background-color: #0095ff;
-    border: 1px solid $outline-color;
-    border-radius: 0.25rem;
-    color: #fff;
-    @include labels-btns-font;
-    @include tablet {
-      width: 10rem;
-      padding-right: 3rem;
-      margin: 0 1.5rem 0 0;
-    }
+  @include flex-justify(space-between);
+  align-items: center;
+  padding: 0 calc(50% - 1.8rem) 0 0.5rem;
+  background-color: #0095ff;
+  border: 1px solid $outline-color;
+  border-radius: 0.25rem;
+  width: 100%;
+  height: 2.5rem;
+  color: #fff;
+  font-size: 0.625rem;
+  line-height: 1.25rem;
+  font-weight: 700;
 
-    &:hover {
-      background-color: #0065ad;
+  @include tablet {
+    font-size: 0.75rem;
+    line-height: 1.25rem;
+    width: 10rem;
+    padding-right: 3rem;
+  }
+
+  &:hover {
+    background-color: #0065ad;
+  }
+
+  &--nav {
+    text-decoration: none;
+    @include tablet {
+      margin: 0 1.5rem 0 0;
     }
   }
 
   &--form {
-    @extend .button--nav;
     @include tablet {
       margin: 0.25rem 0 0 1.5rem;
+      display: inline-flex;
+      vertical-align: top;
     }
   }
+
 }
