--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -2,9 +2,8 @@ $primary-text-color:#323232;
 $secondary-text-color:#AFAFAF;
 $outline-color:#E1E1E1;
 
-$fixed-width:80rem;
-$tablet-width: 768px;
-$desktop-width: 1280px;
+$tablet-width: 48rem;
+$desktop-width: 80rem;
 
 $mobile-margin: 1rem;
 $tablet-desktop-margin: 1.5rem;
