added cta color as a variable

--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -29,7 +29,7 @@
       @include flex-justify(space-between);
     }
   }
-  
+
   &__search {
     background: no-repeat center left 1rem url("../../assets/images/search.svg");
     vertical-align: top;
@@ -42,29 +42,25 @@
     border-radius: 0.25rem;
     background-color: #fafafa;
     border: 1px solid $outline-color;
-  
+
     @include body-font;
     &::placeholder {
       @include body-font;
     }
-  
+
     @include tablet {
       width: 15.625rem;
       margin: 0 1.5rem 0;
       height: 2.5rem;
     }
-  
+
     &:focus {
-      outline:none;
-      border: 1px solid #0095ff;
+      outline: none;
+      border: 1px solid $cta-color;
     }
-  
   }
 
   &__link {
     text-decoration: none;
   }
-
 }
-
-
