--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,6 +1,7 @@
 $primary-text-color:#323232;
 $secondary-text-color:#AFAFAF;
 $outline-color:#E1E1E1;
+$cta-color: #0095ff;
 
 $tablet-width: 48rem;
 $desktop-width: 80rem;
