--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -5,7 +5,7 @@
   @include flex-justify(space-between);
   align-items: center;
   padding: 0 calc(50% - 1.5rem) 0 0.5rem;
-  background-color: #0095ff;
+  background-color: $cta-color;
   border: 1px solid $outline-color;
   border-radius: 0.25rem;
   width: 100%;
@@ -23,7 +23,7 @@
   }
 
   &:hover {
-    background-color: #0065ad;
+    background-color: $cta-color;
   }
 
   &--nav {
