added icons images and logofolders

--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -31,7 +31,7 @@
   }
 
   &__search {
-    background: no-repeat center left 1rem url("../../assets/images/search.svg");
+    background: no-repeat center left 1rem url("../../assets/icons/search.svg");
     vertical-align: top;
     display: inline-flex;
     align-items: center;
